--- a/src/scss/modules/catalog-bar.scss
+++ b/src/scss/modules/catalog-bar.scss
@@ -26,7 +26,7 @@
   // .catalog-bar__show
   &__show {
     display: none;
-    @media (min-width: 475px) {
+    @media (min-width: $md6) {
       display: inline-grid;
       grid-auto-flow: column;
       align-items: center;
