--- a/src/scss/pagination.scss
+++ b/src/scss/pagination.scss
@@ -44,7 +44,7 @@
         }
       }
     }
-    @media (min-width: 375px) {
+    @media (min-width: $md7) {
       font-size: 14px;
       width: 28px;
       height: 28px;
