fix news-side label focus-visible style

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -880,7 +880,8 @@ body {
     color: $color-black;
     margin-bottom: 20px;
     @media (min-width: $md2) {
-      &:hover {
+      &:hover,
+      &:focus-visible {
         color: $color-contrast;
       }
     }
